--- a/tracer_base/CMakeLists.txt
+++ b/tracer_base/CMakeLists.txt
@@ -1,15 +1,17 @@
-cmake_minimum_required(VERSION 2.8.3)
+cmake_minimum_required(VERSION 3.0.2)
 project(tracer_base)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
-add_compile_options(-std=c++11)
-
+add_compile_options(-std=c++17)
+## Set compiler to use c++ 17 features
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # cmake module path
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+#list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 find_package(catkin REQUIRED COMPONENTS    
-    roslaunch 
-    roslint 
+#    roslaunch
+#    roslint
     roscpp 
     sensor_msgs
     std_msgs
@@ -30,7 +32,7 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
   INCLUDE_DIRS include
   LIBRARIES tracer_messenger
-  CATKIN_DEPENDS tracer_msgs roscpp sensor_msgs
+# CATKIN_DEPENDS tracer_msgs roscpp sensor_msgs
 #   DEPENDS Boost
 )
 
@@ -59,15 +61,15 @@ target_link_libraries(tracer_base_sim_node tracer_messenger ${catkin_LIBRARIES})
 ## Install ##
 #############
 
-roslaunch_add_file_check(launch)
+#roslaunch_add_file_check(launch)
 
-install(TARGETS tracer_messenger tracer_base_node
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
+#install(TARGETS tracer_messenger tracer_base_node
+#  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+#  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
+#  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION})
 
-install(DIRECTORY include/${PROJECT_NAME}/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
+#install(DIRECTORY include/${PROJECT_NAME}/
+#  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
 
-install(DIRECTORY launch urdf
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+#install(DIRECTORY launch urdf
+#  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
