--- a/tracer_base/package.xml
+++ b/tracer_base/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>tracer_base</name>
-  <version>0.3.3</version>
+  <version>0.0.0</version>
   <description>AgileX Tracer robot driver</description>
 
   <author email="ruixiang.du@westonrobot.com">Ruixiang Du</author>
@@ -21,13 +21,13 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>wrp_sdk</build_depend>
   <!--build_depend>tracer_sdk</build_depend-->
-  <run_depend>controller_manager</run_depend>
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>tracer_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>topic_tools</run_depend>
-  <!--run_depend>tracer_sdk</run_depend-->
-  <run_depend>wrp_sdk</run_depend>
+  <exec_depend>controller_manager</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>tracer_msgs</exec_depend>
+  <exec_depend>roscpp</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>topic_tools</exec_depend>
+  <!--exec_depend>tracer_sdk</exec_depend-->
+  <exec_depend>wrp_sdk</exec_depend>
   <export></export>
 </package>
