--- a/tracer_base/package.xml
+++ b/tracer_base/package.xml
@@ -19,7 +19,7 @@
   <build_depend>roslaunch</build_depend>
   <build_depend>roslint</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>wrp_sdk</build_depend>
+  <build_depend>ugv_sdk</build_depend>
   <!--build_depend>tracer_sdk</build_depend-->
   <exec_depend>controller_manager</exec_depend>
   <exec_depend>geometry_msgs</exec_depend>
@@ -28,6 +28,6 @@
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>topic_tools</exec_depend>
   <!--exec_depend>tracer_sdk</exec_depend-->
-  <exec_depend>wrp_sdk</exec_depend>
+  <exec_depend>ugv_sdk</exec_depend>
   <export></export>
 </package>
