--- a/tracer_msgs/CMakeLists.txt
+++ b/tracer_msgs/CMakeLists.txt
@@ -52,6 +52,7 @@ add_message_files(
     TracerLightState.msg
     TracerLightCmd.msg
     TracerStatus.msg
+    TracerRsStatus.msg
     UartTracerStatus.msg
 )
 
